--- a/PingPongFeed.Service/appsettings.Development.json
+++ b/PingPongFeed.Service/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MysqlConnection": "server=mysql-nvenger-dev.cluster-cv2nh0i8zfh0.ap-southeast-1.rds.amazonaws.com;database=test;uid=root;password=NW8448zznumz;charset=utf8;Pooling=true;ConnectionLifeTime=0;ConnectionReset=true;ConnectionIdleTimeout=180;MinimumPoolSize=5;MaximumPoolsize=5"
+    "MysqlConnection": "server=mysql-lotto.cnowxsoknapu.ap-southeast-1.rds.amazonaws.com;database=lotto;uid=root;password=NW8448zzxxx999;charset=utf8;Pooling=true;ConnectionLifeTime=0;ConnectionReset=true;ConnectionIdleTimeout=180;MinimumPoolSize=5;MaximumPoolsize=5"
   },
   "Serilog": {
     "Using": [
