--- a/PingPong.Infrastructure/PingPong.Infrastructure.csproj
+++ b/PingPong.Infrastructure/PingPong.Infrastructure.csproj
@@ -15,11 +15,17 @@
       <Reference Include="Microsoft.Extensions.Caching.Abstractions">
         <HintPath>..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\6.0.8\Microsoft.Extensions.Caching.Abstractions.dll</HintPath>
       </Reference>
+      <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
+        <HintPath>..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\6.0.8\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="LazyCache.AspNetCore" Version="2.4.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.2" />
       <PackageReference Include="RestSharp" Version="106.11.4" />
       <PackageReference Include="Serilog" Version="2.11.0" />
     </ItemGroup>
