--- a/PingPongFeed.Service/appsettings.json
+++ b/PingPongFeed.Service/appsettings.json
@@ -1,8 +1,35 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.ColoredConsole"
+    ],
+    "MinimumLevel": {
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.EntityFrameworkCore.Query": "Error",
+        "Microsoft.AspNetCore.Localization.RequestLocalizationMiddleware": "Error",
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information",
+        "System": "Warning",
+        "Serilog": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "ColoredConsole",
+        "Args": {
+          "outputTemplate": "[{Timestamp:MM-dd HH:mm:ss.fff} [{Level:u3}] ({ProcessId}/{ThreadId}) {SourceContext:l}  {Message}{NewLine}{Exception}",
+          "restrictedToMinimumLevel": "Debug"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "Web"
     }
   },
   "AllowedHosts": "*"
